commit: finalização do desafio; finalização das regras de negócio e pequenas alterações de ambiente.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Transaction-Microservice
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${url-database}
+spring.datasource.username=${user-database}
+spring.datasource.password=${pass-database}
 spring.jpa.hibernate.ddl-auto=create-drop
